final test maybe

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -18,7 +18,7 @@
         </div>
       </div>
       <div class="aspect-[16/10] rounded-xl overflow-hidden shadow-soft">
-        <img src="/photos/team_photo.jpg" alt="Наша команда" class="w-full h-full object-cover" />
+  <img src={`${import.meta.env.BASE_URL}photos/team_photo.jpg`} alt="Наша команда" class="w-full h-full object-cover" />
       </div>
     </div>
   </div>
