--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -14,7 +14,7 @@
     <div class="space-y-2 md:text-right">
       <div class="text-sm text-white/60">При поддержке:</div>
       <div class="inline-flex items-center gap-3">
-        <img src="/photos/ester-auto_r.png" alt="Ester Auto" class="h-12 w-auto" />
+  <img src={`${import.meta.env.BASE_URL}photos/ester-auto_r.png`} alt="Ester Auto" class="h-12 w-auto" />
       </div>
     </div>
   </div>
