Удалил текст Lorem ipsum из адреса

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,6 +25,6 @@ const sorted = [...events].sort((a, b) => (a.date < b.date ? 1 : -1));
     </div>
   </section>
   <Rules />
-  <MapBlock address="Lorem ipsum, ул. Dolor 1" />
+  <MapBlock address="" />
   <LightboxScript />
 </Base>
